<resources>
    <string name="app_name">Score Keeper</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="goal">Goal!</string>
    <string name="foul">Foul</string>
    <string name="reset">New Match</string>
    <string name="scoreA">0</string>
    <string name="foulsA">0</string>
    <string name="scoreB">0</string>
    <string name="foulsB">0</string>
</resources>
