<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/teamA" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/TextViewScore"
                android:text="@string/scoreA" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addGoalForTeamA"
                android:text="@string/goal" />

            <TextView
                android:id="@+id/team_a_fouls"
                style="@style/TextViewFoul"
                android:text="@string/foulsA" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addFoulForTeamA"
                android:text="@string/foul" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#25A18E"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/teamB" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/TextViewScore"
                android:text="@string/scoreB" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addGoalForTeamB"
                android:text="@string/goal" />

            <TextView
                android:id="@+id/team_b_fouls"
                style="@style/TextViewFoul"
                android:text="@string/foulsB" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addFoulForTeamB"
                android:text="@string/foul" />

        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/CustomButtonStyle"
        android:onClick="resetScore"
        android:text="@string/reset" />

</LinearLayout>